--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header p {
 
 /* Navigation */
 nav {
-    background-color: #a0522d; /* Brown */
+    background-color: #a0522d; /* Dark Brown */
     padding: 10px 0;
     text-align: center;
 }
